--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-connect": "^0.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^8.1.0",
     "request-ip": "^2.1.3"
   },
   "devDependencies": {
