--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "csrf": "^3.1.0",
     "iron-session": "^6.0.5",
     "mongodb": "^4.3.1",
     "next": "^11.0.1",
     "next-connect": "^0.11.0",
+    "next-cookie": "^2.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-toastify": "^8.1.0",
