--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
     "axios": "^0.25.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "csrf": "^3.1.0",
+    "feed": "^4.2.2",
+    "fs": "^0.0.1-security",
     "iron-session": "^6.0.5",
     "mongodb": "^4.3.1",
     "next": "^11.0.1",
