--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
+    "cloudinary": "^1.28.1",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "csrf": "^3.1.0",
