--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-cookie": "^2.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-swipeable": "^6.2.0",
     "react-toastify": "^8.1.0",
     "request-ip": "^2.1.3"
   },
