--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@giscus/react": "^1.1.1",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
