--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-connect": "^0.11.0",
     "next-cookie": "^2.8.0",
     "react": "17.0.2",
+    "react-chrome-dino": "^0.1.3",
     "react-dom": "17.0.2",
     "react-swipeable": "^6.2.0",
     "react-toastify": "^8.1.0",
