--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csrf": "^3.1.0",
     "feed": "^4.2.2",
     "framer-motion": "^6.2.3",
+    "github-markdown-css": "^5.1.0",
     "iron-session": "^6.0.5",
     "mongodb": "^4.3.1",
     "next": "^11.0.1",
@@ -27,8 +28,10 @@
     "react": "17.0.2",
     "react-chrome-dino": "^0.1.3",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.0",
     "react-swipeable": "^6.2.0",
     "react-toastify": "^8.1.0",
+    "remark-gfm": "^3.0.1",
     "request-ip": "^2.1.3"
   },
   "devDependencies": {
