--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "react-swipeable": "^6.2.0",
     "react-syntax-highlighter": "^15.4.5",
     "react-toastify": "^8.1.0",
-    "remark-gfm": "^3.0.1",
-    "request-ip": "^2.1.3"
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "8.8.0",
