--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "cloudinary": "^1.28.1",
-    "crypto-js": "^4.1.1",
+    "crypto": "^1.0.1",
     "csrf": "^3.1.0",
     "feed": "^4.2.2",
     "framer-motion": "^6.2.3",
@@ -27,10 +27,9 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
     "react-markdown": "^8.0.0",
-    "react-swipeable": "^6.2.0",
+    "react-share": "^4.4.0",
     "react-syntax-highlighter": "^15.4.5",
     "react-toastify": "^8.1.0",
-    "react-tooltip": "^4.2.21",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
