--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-share": "^4.4.0",
     "react-syntax-highlighter": "^15.4.5",
     "react-toastify": "^8.1.0",
+    "react-tooltip": "^4.2.21",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
