--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "cloudinary": "^1.28.1",
-    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "csrf": "^3.1.0",
     "feed": "^4.2.2",
     "framer-motion": "^6.2.3",
-    "iron-session": "^6.0.5",
     "mongodb": "^4.3.1",
     "next": "^11.0.1",
     "next-connect": "^0.11.0",
