--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "feed": "^4.2.2",
     "framer-motion": "^6.2.3",
     "mongodb": "^4.3.1",
-    "next": "^11.0.1",
+    "next": "12.0.9",
     "next-connect": "^0.11.0",
     "next-cookie": "^2.8.0",
     "react": "17.0.2",
