--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@giscus/react": "^1.1.1",
-    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
-    "cloudinary": "^1.28.1",
     "crypto-js": "^4.1.1",
-    "csrf": "^3.1.0",
     "feed": "^4.2.2",
     "framer-motion": "^6.2.3",
     "mongodb": "^4.3.1",
@@ -30,6 +27,7 @@
     "react-syntax-highlighter": "^15.4.5",
     "react-toastify": "^8.1.0",
     "react-tooltip": "^4.2.21",
+    "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
